Major refactor, handlers implemented, things should be a little more modular moving forward.

--- a/AnarchyBot/AnarchyBot.csproj
+++ b/AnarchyBot/AnarchyBot.csproj
@@ -82,6 +82,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handlers\HandlerBase.cs" />
+    <Compile Include="Handlers\Help.cs" />
+    <Compile Include="Handlers\Whois.cs" />
+    <Compile Include="Manager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
