--- a/AnarchyBot/AnarchyBot.csproj
+++ b/AnarchyBot/AnarchyBot.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="Handlers\HandlerBase.cs" />
     <Compile Include="Handlers\Help.cs" />
+    <Compile Include="Handlers\Level.cs" />
     <Compile Include="Handlers\Whois.cs" />
     <Compile Include="Manager.cs" />
     <Compile Include="Program.cs" />
@@ -93,6 +94,11 @@
     <None Include=".gitignore" />
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Data\levels.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
