--- a/AnarchyBot/AnarchyBot.csproj
+++ b/AnarchyBot/AnarchyBot.csproj
@@ -104,5 +104,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AoLib\AoLib.csproj">
+      <Project>{d1f26da9-8b99-4663-923b-2c4209b4f625}</Project>
+      <Name>AoLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
