net 6 refactor mid point

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp5.0/AnarchyBot.dll",
+            "program": "${workspaceFolder}/src/bin/Debug/net6.0/AnarchyBot.dll",
             "args": [],
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/src/bin/Debug/net6.0/",
             "console": "internalConsole",
             "stopAtEntry": false
         },
